13046
The code below
```scala
class Bar(x: Char)
class Foo(x: Int, b: Bar) {
  class Bar2(x: Char) extends Bar(x)
  def this(x: Int) = this(x, new Bar2('a'))
}
```
produces the following error:
```scala
test.scala:4: error: not found: type Bar2
  def this(x: Int) = this(x, new Bar2('a'))
                                 ^
one error found
```
Previous versions of the Scala distribution behave the same.
